_sass/_layout.scss
/* ... */
.button-text {
  font-weight: 700;
  border-radius: 0;
  font-size: 14px;
  letter-spacing: 0.5px;
  color: #FFFFFF;
  white-space: nowrap;
  &:hover, &:visited, &:focus, &:active, &:focus-within {
    color: #FFFFFF;
  }
}

.button{
  &.is-nav {
    border-radius: 0;
  }
}

div.header {
  font-family: $body-font-family;
  background-color: $white;
  text-align: center;
  color: $black;
  background-size: cover;
  .header-title {

    font-family: $body-font-family;
    font-size: 48px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: 0.91px;
    color: $black;
  }
  .header-subtitle {

    font-family: $body-font-family;
    font-size: 32px;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: 0.61px;
    color: $black;
    padding-bottom: 30px;
    @include media-query($on-palm) {
      font-size: 20px;
    }
  }
  .scrim-layer {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    max-width: 1000px;
    margin: auto;
    text-align: left;
    padding: 35px 15px 20px;
    @include media-query($md-width) {
      max-width: $md-content-width;
    }
    @include media-query($on-palm) {
      padding: 10px 15px;
    }
  }
}

.related-blogs-container{
  max-width: $content-width;
  margin-right: auto;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  .more {
    text-transform: uppercase;
    font-size: 27px;
    font-weight: bold;
    display: block;
    margin-bottom: 10px;
    font-family: "Graphik", sans-serif;
    color: $black;
    @include media-query($on-palm) {
      font-size: 23px;
    }
  }
  .bottom-row {
    margin-top: 10px;
    display: flex;
    @include media-query($on-palm) {
      flex-direction: column;
    }
    .featured-column {
      flex-basis: 100%;
      .post-item {
        .post-title  {
          font-size: 20px;
          line-height: 26px;
          margin-top: 2px;
        }
         padding: 30px 20px 30px 10px;
         @include media-query($on-palm) {
           padding: 15px 0px 30px 0px;
         }
      }
    }
    .featured-column:last-of-type {
        margin-left: 10px;
        @include media-query($on-palm) {
          margin-top: 10px;
          margin-left: 0;
        }
    }
    .featured-post {
      height: 200px;
      @include media-query($on-palm) {
        height: 200px;
      }
      @media (min-width: $on-palm + 1) {
        flex: 0.5;
      }
    }
  }
  .featured-post {
    position: relative;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 400px;
    a {
      display: block;
      height: 100%;
      width: 100%;
    }
    img {
      box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .5);
    }
    @include media-query($on-palm) {
      height: 200px;
    }
  }
  @include media-query($md-width) {
    max-width: $md-content-width;
  }
  @include media-query($on-palm) {
    flex-direction: column;
  }
}

.list-container {
  position: relative;
  z-index: 1;
  background-color: #FFFFFF;
  // margin-top: 100px;
}

.featured-container {
  max-width: $content-width;
  margin-right: auto;
  margin-left: auto;
  padding: 0 0px;
  flex-direction: column;
  .bottom-row {
    margin-top: 10px;
    display: flex;
    @include media-query($on-palm) {
      flex-direction: column;
    }
    .featured-column {
      flex: 50%;
      .post-item {
         padding: 30px 20px 30px 10px;
         @include media-query($on-palm) {
           padding: 15px 0px 30px 0px;
         }
      }
    }
    .featured-column:last-of-type {
        margin-left: 10px;
        @include media-query($on-palm) {
          margin-top: 10px;
          margin-left: 0;
        }
    }
    .featured-post {
      height: 200px;
      background-position-x: 0;
      @include media-query($on-palm) {
        height: 200px;
      }
      @media (min-width: $on-palm + 1) {
        flex: 0.5;
      }
    }
  }
  .featured-post {
    position: relative;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 400px;
    background-position-x: 0;
    a {
      display: block;
      height: 100%;
      width: 100%;
    }
    img {
      box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .5);
    }
    @include media-query($on-palm) {
      height: 200px;
    }
  }
  @include media-query($md-width) {
    max-width: $md-content-width;
  }
  @include media-query($on-palm) {
    flex-direction: column;
  }
}


.post-author-avatar {
  float: left;
  border-radius: 50%;
  margin-right: 20px;
  margin-bottom: 10px;
}

.post-list {
  margin-left: 0;
  padding-left: 0;
  list-style: none;
  >li {
    margin-bottom: 15px;
    @include media-query($on-palm) {
      margin-bottom: 15px;
    }
  }
  >li:last-child {
    margin-bottom: 20px;
  }
}

a.blog-category {
  text-transform: uppercase;
  font-size: 15px;
  font-weight: bold;
  display: block;
  margin-bottom: 3px;
  font-family: $body-font-family;
  @include media-query($on-palm) {
    font-size: 13px;
    margin-bottom: 2px;
  }
}

.post-title {
  color: $black;
  font-family: $title-font-family;
  font-size: 32px;
  line-height: 40px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin-top: 0px;
  @include media-query($on-palm) {
    font-size: 23px;
    margin-top: 0;
  }
}
/* ... */

